// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textbox component render showSuccessCheck on validation fail 1`] = `
<Styled(View)>
  <Styled(Text)
    isFocused="foo"
  >
    input
  </Styled(Text)>
  <Styled(TextInput)
    aria-label="input"
    className="TextBox__input"
    data-locator="input-field"
    error="foo"
    id="input"
    keyboardType="default"
    onBlur={[Function]}
    onEndEditing={[Function]}
    onFocus={[Function]}
    returnKeyType="next"
    showSuccessCheck={true}
    type="text"
    value="foo"
  />
  <Styled(Image)
    source={
      Object {
        "testUri": "../../../../core/src/assets/success-icon.png",
      }
    }
  />
  <Styled(View)>
    <Styled(Image)
      source={
        Object {
          "testUri": "../../../../core/src/assets/alert-triangle.png",
        }
      }
    />
    <Styled(BodyCopy)
      color="error"
      fontSize="fs12"
      fontWeight="semibold"
      mobilefontFamily={
        Array [
          "secondary",
        ]
      }
      text="foo"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`Textbox component render showSuccessCheck on validation true 1`] = `
<Styled(View)>
  <Styled(Text)
    isFocused="foo"
  >
    input
  </Styled(Text)>
  <Styled(TextInput)
    aria-label="input"
    className="TextBox__input"
    data-locator="input-field"
    error=""
    id="input"
    keyboardType="default"
    onBlur={[Function]}
    onEndEditing={[Function]}
    onFocus={[Function]}
    returnKeyType="next"
    showSuccessCheck={true}
    type="text"
    value="foo"
  />
  <Styled(Image)
    source={
      Object {
        "testUri": "../../../../core/src/assets/success-icon.png",
      }
    }
  />
</Styled(View)>
`;

exports[`Textbox component renders correctly 1`] = `
<Styled(View)>
  <Styled(Text)
    isFocused="foo"
  >
    input
  </Styled(Text)>
  <Styled(TextInput)
    aria-label="input"
    className="TextBox__input"
    data-locator="input-field"
    error=""
    id="input"
    keyboardType="default"
    onBlur={[Function]}
    onEndEditing={[Function]}
    onFocus={[Function]}
    returnKeyType="next"
    showSuccessCheck={false}
    type="text"
    value="foo"
  />
</Styled(View)>
`;
